--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "prisma": "^5.2.0"
   }
 }
