--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "server": "node ./server/index.js",
     "server:dev": "nodemon ./server/index.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
