--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node ./server/index.js",
-    "server:dev": "nodemon ./server/index.js"
+    "server:dev": "nodemon ./server/index.js",
+    "client:build": "cd client && npm run build",
+    "build:dev": "cd client && npm run build && cd .. && nodemon server/index.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
