--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@esbuild/darwin-x64": "^0.19.3",
     "@prisma/client": "^5.2.0",
     "badge-maker": "^3.3.1",
     "bcryptjs": "^2.4.3",
