--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently 'npm run server:dev' 'npm run client:dev'  ",
     "client:build": "cd client && npm run build",
     "build:dev": "cd client && npm run build && cd .. && nodemon server/index.js",
-    "migrate:prisma": "npx prisma migrate reset && npx prisma migrate dev && node prisma/seed.js",
+    "migrate:prisma": "npx prisma migrate reset && npx prisma migrate dev",
     "build": "npm i && cd client && npm i && npm run build"
   },
   "prisma": {
@@ -25,13 +25,15 @@
     "badge-maker": "^3.3.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.1",
